src/objects/LAC_Financial_Cooperative__c.object
<CustomObject>
    <description>Object that contains details about the Financial Profie of cooperatives</description>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>coop_FinancialProfile__c</fullName>
        <label>coop_FinancialProfile</label>
        <referenceTo>LAC_Cooperative__c</referenceTo>
        <relationshipLabel>LAC Cooperatives Financial Profile</relationshipLabel>
        <relationshipName>LAC_Cooperatives_Financial_Profile</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>gb_longTermLiabilities__c</fullName>
        <label>gb_longTermLiabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gb_shortTermLiabilities__c</fullName>
        <label>gb_shortTermLiabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gb_totalAssets__c</fullName>
        <label>gb_totalAssets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gb_totalCapital__c</fullName>
        <label>gb_totalCapital</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>gb_totalLiabilities__c</fullName>
        <label>gb_totalLiabilities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sr_NetProfitOrLoss__c</fullName>
        <label>sr_NetProfitOrLoss</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sr_totalCost__c</fullName>
        <label>sr_totalCost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>sr_total_Income__c</fullName>
        <label>sr_total_Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>LAC Cooperative Financial Profile</label>
    <nameField>
        <displayFormat>COOPFP-{00000}</displayFormat>
        <label>LAC Financial Cooperative Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAC Cooperatives Financial Profile</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>